fix gap

--- a/src/app/pages/vehicle/vehicle.scss
+++ b/src/app/pages/vehicle/vehicle.scss
@@ -77,8 +77,8 @@ $bg-page: #f8f9fa;
       }
       .select-input-group {
         .select-status {
-          padding: 6px 12px;
-          border: 1px solid #dee2e6;
+          padding: 6px 10px;
+          border: 1px solid #ced4da;
           border-radius: 6px;
           background-color: white;
           font-family: inherit;
